[gd_scene load_steps=5 format=3 uid="uid://c2nj8k4m7v9x2"]

[ext_resource type="Script" path="res://scripts/vehicle/bicycle_controller.gd" id="1_bicycle"]

[sub_resource type="BoxShape3D" id="BoxShape3D_body"]
size = Vector3(0.5, 0.8, 1.8)

[sub_resource type="BoxMesh" id="BoxMesh_frame"]
size = Vector3(0.3, 0.5, 1.5)

[sub_resource type="CylinderMesh" id="CylinderMesh_wheel"]
top_radius = 0.35
bottom_radius = 0.35
height = 0.1

[sub_resource type="SphereShape3D" id="SphereShape3D_interaction"]
radius = 2.0

[node name="Bicycle" type="VehicleBody3D"]
collision_layer = 16
collision_mask = 1
mass = 20.0
script = ExtResource("1_bicycle")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0)
shape = SubResource("BoxShape3D_body")

[node name="BikeModel" type="Node3D" parent="."]

[node name="Frame" type="MeshInstance3D" parent="BikeModel"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0)
mesh = SubResource("BoxMesh_frame")

[node name="Handlebar" type="MeshInstance3D" parent="BikeModel"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.1, -0.6)
mesh = SubResource("BoxMesh_frame")
skeleton = NodePath("../..")

[node name="FrontWheel" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4, -0.7)
wheel_radius = 0.35
suspension_travel = 0.15
suspension_stiffness = 60.0
damping_compression = 0.8
damping_relaxation = 2.0
wheel_friction_slip = 2.0

[node name="WheelMesh" type="MeshInstance3D" parent="FrontWheel"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)
mesh = SubResource("CylinderMesh_wheel")

[node name="RearWheel" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4, 0.7)
use_as_traction = true
use_as_steering = false
wheel_radius = 0.35
suspension_travel = 0.15
suspension_stiffness = 60.0
damping_compression = 0.8
damping_relaxation = 2.0
wheel_friction_slip = 2.5

[node name="WheelMesh" type="MeshInstance3D" parent="RearWheel"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)
mesh = SubResource("CylinderMesh_wheel")

[node name="RiderPosition" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.0, 0.2)

[node name="DismountPosition" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.2, 0, 0)

[node name="InteractionArea" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="InteractionArea"]
shape = SubResource("SphereShape3D_interaction")
